Fix 11 high-impact issues from MISSING.md audit
- R18-5/R18-6: Add test-phase warnings to run-tier and run-remaining goals
- R18-8: Only print remaining-tests message when tests actually deferred
- R9-1: Remove double [test-order] prefix from PriorityClassOrderer logs
- R10-7: Restore thread interrupt status in ChangeDetector.findGitRoot()
- R13-1: Only show tiered-select next-steps when tier 1 not empty
- R10-5: Skip method reordering silently for @Execution(CONCURRENT)
- R18-1: Show framework-specific ordering class names (TestNG vs JUnit5)
- R18-3: Warn when weights file has no recognized keys (property format)
- OptimizeMojo: Log success message on successful weight optimization
- SelectMojo: Throw exception when both topN=0 and randomM=0
- ParameterValidator: Fix syntax error (extra closing brace)

All fixes compile cleanly. See FIXES_SESSION_SUMMARY.md for details.